<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2020 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <!-- <string name="app_name">PerspectivePotVAndroid</string> moved to gradle -->

    <string name="app_logo_description">Perspective Logo</string>

    <string name="debug_menu">Debug Menu</string>

    <string name="empty_world_list">No worlds found</string>
    <string name="empty_puzzle_list">No puzzles found</string>

    <string name="error_add_world">Failed to add world</string>
    <string name="error_game_init">Failed to initialize game</string>
    <string name="error_get_scene_graph_node">Failed to get scene graph node</string>
    <string name="error_save_solution">Failed to save solution</string>
    <string name="error_clear_solutions">Failed to clear solutions</string>

    <string name="loading">Loading…</string>
    <string name="warning">Warning</string>

    <string name="main_menu">Main Menu</string>
    <string name="main_play">Play</string>
    <string name="main_settings">Settings</string>
    <string name="main_debug">DEBUG</string>

    <string name="puzzle_locked">Puzzle is locked</string>

    <string name="game_lost_title">Game Over</string>
    <string name="game_lost_message">Lost in Space</string>
    <string name="game_won_title">Congratulations!</string>
    <string name="game_won_message">One Step Closer</string>
    <string name="game_won_message_tutorial">Great Job!</string>
    <string name="game_move_format">%d / %d</string>
    <string name="game_launch">Launch</string>
    <string name="game_menu">Game Menu</string>
    <string name="game_back">Back</string>
    <string name="game_next">Next</string>
    <string name="game_reset">Reset</string>
    <string name="game_retry">Retry</string>
    <string name="game_settings">Settings</string>
    <string name="star">Star</string>
    <string name="star_one">One Star</string>
    <string name="star_two">Two Stars</string>
    <string name="star_three">Three Stars</string>
    <string name="star_four">Four Stars</string>
    <string name="star_five">Five Stars</string>
    <string name="star_count_format">\n%d / %d\n</string>

    <string name="preference_game_title">Game</string>
    <string name="preference_puzzle_outline_key">puzzle_outline_preference</string>
    <string name="preference_puzzle_outline_title">Outline</string>
    <string name="preference_puzzle_music_key">puzzle_music_preference</string>
    <string name="preference_puzzle_music_title">Music</string>
    <string name="preference_puzzle_sound_key">puzzle_sound_preference</string>
    <string name="preference_puzzle_sound_title">Sound Effects</string>
    <string name="preference_puzzle_vibration_key">puzzle_vibration_preference</string>
    <string name="preference_puzzle_vibration_title">Vibration</string>

    <string name="preference_clear_progress_key">clear_progress_preference</string>
    <string name="preference_clear_progress_title">Clear Progress</string>
    <string name="preference_clear_progress_description">Resets all game progress</string>
    <string name="preference_clear_progress_confirmation">All game progress will be deleted. Are you sure?</string>
    <string name="preference_clear_progress_action">Delete</string>

</resources>
