<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2020 Aletheia Ware LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/game_margin"
    android:padding="@dimen/view_padding"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="@dimen/card_corner_radius"
    tools:context=".ui.GameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/game_margin"
            android:padding="@dimen/view_padding"
            android:text="@string/game_won_title"
            android:textColor="@color/text"
            android:textSize="@dimen/text_primary_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/game_won_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:contentDescription="@string/star_one"
                android:src="@drawable/star"
                android:tint="@color/yellow" />

            <ImageView
                android:id="@+id/game_won_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:contentDescription="@string/star_two"
                android:src="@drawable/star"
                android:tint="@color/yellow" />

            <ImageView
                android:id="@+id/game_won_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:contentDescription="@string/star_three"
                android:src="@drawable/star"
                android:tint="@color/yellow" />

            <ImageView
                android:id="@+id/game_won_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:contentDescription="@string/star_four"
                android:src="@drawable/star"
                android:tint="@color/yellow" />

            <ImageView
                android:id="@+id/game_won_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:contentDescription="@string/star_five"
                android:src="@drawable/star"
                android:tint="@color/yellow" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/game_margin"
            android:padding="@dimen/view_padding"
            android:text="@string/game_won_message"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary_size" />

        <androidx.cardview.widget.CardView
            android:id="@+id/game_won_retry_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/game_margin"
            android:padding="@dimen/view_padding"
            app:cardBackgroundColor="@color/warning"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:visibility="gone" >

            <Button
                android:id="@+id/game_won_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_padding"
                android:text="@string/game_retry"
                android:textColor="@color/text"
                android:textSize="@dimen/text_secondary_size" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:padding="@dimen/view_padding"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <Button
                    android:id="@+id/game_won_main_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_padding"
                    android:text="@string/main_menu"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_secondary_size" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/game_margin"
                android:padding="@dimen/view_padding"
                app:cardBackgroundColor="@color/accent"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <Button
                    android:id="@+id/game_won_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_padding"
                    android:text="@string/game_next"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_secondary_size" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
